@@ -385,7 +385,7 @@ public class QuickHull3D {
                         System.out.println("Expecting face index");
                         System.exit(1);
                     }
-                    indexList.add(0, new Integer((int) stok.nval));
+                    indexList.add(0, Double.valueOf(stok.nval).intValue());
                 }
                 faceIndices[i] = new int[indexList.size()];
                 int k = 0;
